@@ -1,3 +1,9 @@
+2012-12-09  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/14933
+	* archive.c (bsd_write_armap): Properly check indicies bigger than
+	4Gb.
+
 2012-11-29  Roland McGrath  <mcgrathr@google.com>
 
 	* elf-nacl.c (segment_eligible_for_headers): Disallow writable segments.
